Added relative import resolution