@@ -1,10 +1,12 @@
 package dev.morganwalsh.fox;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 import java.util.Scanner;
@@ -15,6 +17,12 @@ public class Fox {
 	static boolean hadError;
 	static boolean hadRuntimeError;
 	public static Scanner sc = new Scanner(System.in);
+	
+	private static String workingDirectory;
+	private static String filePath;
+	private static Path launchScriptLocation;
+	static Path launchScriptDirectory;
+	static Path currentExecutionDirectory;
 
 	public static void main(String[] args) throws IOException {
 		if (args.length > 1) {
@@ -29,7 +37,21 @@ public class Fox {
 	}
 
 	private static void runFile(String path) throws IOException {
-		byte[] bytes = Files.readAllBytes(Paths.get(path));
+//		File directory = new File(workingDirectory);
+//		String[] fileNames = directory.list((fileDirectory, fileName) -> {
+//			return true;
+//		});
+		
+		// for the resolver to resolve relative links
+		workingDirectory = System.getProperty("user.dir");
+		launchScriptLocation = Path.of(workingDirectory, "\\", path);
+		launchScriptDirectory = launchScriptLocation.getParent();
+		currentExecutionDirectory = launchScriptDirectory;
+//		System.out.println("Working Directory = " + workingDirectory);
+//		System.out.println("Path: " + path);
+//		System.out.println("Full path: " + launchScriptLocation);
+		
+		byte[] bytes = Files.readAllBytes(launchScriptLocation);
 		run(new String(bytes, Charset.defaultCharset()));
 		
 		if (hadError) System.exit(65);
